[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/Achievements/Achievement.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Courgette/Courgette-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/ui/bar/0.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/white.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/Open_Sans/OpenSans-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/ui/9pr_h_trans_thin.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 30
extra_spacing_space = -5
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 240, 16 )

[sub_resource type="DynamicFont" id=3]
size = 22
outline_size = 1
outline_color = Color( 0.388235, 0.388235, 0.388235, 1 )
extra_spacing_space = -3
font_data = ExtResource( 5 )

[node name="Achievement" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1408.0
margin_bottom = -968.0
script = ExtResource( 1 )

[node name="Text" type="Label" parent="."]
margin_top = 4.0
margin_right = 512.0
margin_bottom = 49.0
rect_rotation = 0.0273576
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.952941, 0.733333, 0.0941176, 1 )
align = 1

[node name="BarTexture" type="TextureRect" parent="."]
modulate = Color( 0.807843, 0.807843, 0.807843, 1 )
margin_left = 16.0
margin_top = 63.0
margin_right = 496.0
margin_bottom = 97.0
texture = ExtResource( 3 )
stretch_mode = 2

[node name="BarArea" type="Area2D" parent="." groups=[
"MouseAreas",
]]
position = Vector2( 0, 48 )
collision_layer = 4096

[node name="Collision" type="CollisionShape2D" parent="BarArea"]
position = Vector2( 256, 32 )
shape = SubResource( 2 )

[node name="Progress" type="TextureProgress" parent="."]
modulate = Color( 0, 0, 0, 0.588235 )
margin_left = 16.0
margin_top = 63.0
margin_right = 496.0
margin_bottom = 97.0
texture_progress = ExtResource( 4 )
fill_mode = 1
nine_patch_stretch = true

[node name="ProgressLabel" type="Label" parent="."]
margin_left = 16.0
margin_top = 64.0
margin_right = 496.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
valign = 1

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_top = 48.0
margin_right = 512.0
margin_bottom = 112.0
texture = ExtResource( 6 )
draw_center = false
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
